docer compose update

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,4 +30,5 @@ services:
             - '${PORT}:${PORT}'
         volumes:
             - ~/.flowise:/root/.flowise
+            - ../packages/server/src:/usr/src/packages # Относительный путь к исходному коду
         command: /bin/sh -c "sleep 3; flowise start"
